# geoman

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DATA_PROVIDERS_DESIGN.md  Dockerfile  FIGURE_TOOL_PROGRESS.md  FIGURE_TOOL_WIRING_PLAN.md  error  leaflet-test.html  open-layers-test.html  readme.md  uk_countries.sql  zellij.kdl
app/: Cargo.toml
app/src/: constants.rs  enums.rs  errors.rs  helpers.rs  lib.rs  main.rs  routes.rs  serde_helpers.rs  startup.rs  state.rs  urls.rs  utoipa.rs
app/src/config/: app.rs  clerk.rs  db.rs  geoserver.rs  mod.rs  password.rs  qgis_server.rs
app/src/features/: mod.rs
app/src/features/data_providers/: mod.rs  types.rs
app/src/features/figure_tool/: entities.rs  ids.rs  mod.rs
app/src/handlers/: error.rs  mod.rs
app/src/handlers/api/: guard.rs  mod.rs  qgis_projects.rs  tiles.rs
app/src/handlers/docs/: api.rs
app/src/handlers/ogc_api/: collections.rs  conformance.rs  features.rs  landing_page.rs  mod.rs  openapi.rs  queryables.rs
app/src/handlers/webhooks/: clerk.rs  mod.rs  payload.rs
app/src/middleware/: auth.rs  mock_auth.rs  mod.rs
app/src/postgres/: collections.rs  crs.rs  features.rs  gis_data_table.rs  mod.rs  pg_repo.rs  pool_wrapper.rs  project_collections.rs  project_features.rs  projects.rs  repo.rs  sql_fragments.rs  supported_crs.rs  traits.rs
app/src/postgres/api_key/: insert.rs  mod.rs  select.rs
app/src/postgres/business_units/: delete.rs  insert.rs  select.rs  update.rs
app/src/postgres/data_provider_layers/: delete.rs  insert.rs  select.rs  update.rs
app/src/postgres/data_provider_services/: delete.rs  insert.rs  select.rs  update.rs
app/src/postgres/data_providers/: delete.rs  insert.rs  select.rs  update.rs
app/src/postgres/figure/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
app/src/postgres/figure_layer/: insert.rs  mod.rs  select.rs
app/src/postgres/project_features/: get.rs  (+4 more)
app/src/repo/: error.rs  metadata.rs  mod.rs  params.rs  pool_wrapper.rs  traits.rs  types.rs
app/src/routes/: api.rs  mod.rs  ogc_api.rs
app/src/streaming/: feature_collection.rs  mod.rs
app/src/testing/: test_helpers.rs
app/src/types/: authenticated_user.rs  enums.rs  error.rs  mod.rs  password.rs  user.rs  user_client.rs  valid_crs.rs
app/tests/: main.rs
app/tests/app/: db.rs  helpers.rs  mod.rs  test_app.rs
app/tests/auth_tests/: mod.rs  provision_new_user.rs  user_name_update.rs
app/tests/common/: constants.rs  db.rs  enums.rs  helpers.rs  mod.rs  test_app.rs  types.rs
app/tests/features/: mod.rs
app/tests/handlers/: generic.rs  health_check.rs  mod.rs
db_migrate/: Cargo.toml
db_migrate/src/: config.rs  lib.rs  main.rs  migrate.rs  traits.rs  types.rs
db_migrate/src/tables/: mod.rs  project.rs  search_areas.rs  teams.rs  user.rs
domain/: Cargo.toml
domain/src/: api_key.rs  builder.rs  business_unit.rs  collection.rs  collections.rs  data_provider.rs  enums.rs  feature.rs  gis_data_table.rs  id.rs  lib.rs  name.rs  poject_feature.rs  project.rs  subdivision.rs  supported_crs.rs  table_name.rs  team.rs  technology.rs  traits.rs  types.rs  user.rs
domain/src/figure/: input.rs  mod.rs  output.rs  properties.rs
domain/src/figure_layer/: figure_layer_datasource.rs  input.rs  mod.rs  output.rs  properties.rs  supported_epsg.rs
domain/src/layer_style/: mod.rs  output.rs
domain/src/pg_table/: input.rs  mod.rs  output.rs
domain/src/project/: entity.rs  input_dto.rs  mod.rs  name.rs  name_input_dto.rs  properties.rs  slug.rs  update.rs
domain/src/project_collection/: entity.rs  input_dto.rs  list_item.rs  mod.rs  update_dto.rs
domain/src/project_feature/: entity.rs  input_dto.rs  mod.rs
domain/src/turbine_layout/: entity.rs  input.rs  mod.rs  output.rs
domain/src/user/: entitiy.rs  input_dto.rs  mod.rs
geo/: Cargo.toml
geo/src/: dto_builder.rs  lib.rs  shapefile_builder.rs  shapefile_processor.rs  virtual_shapefile.rs
geoman/: Cargo.toml
geoman/configuration/: local.yaml
geoman/src/: constants.rs  helpers.rs  lib.rs  main.rs  urls.rs
geoman/src/app/: config.rs  mod.rs  startup.rs
geoman/tests/: clerk_auth.rs  health_check.rs  helpers.rs  main.rs  misc.rs
geoman/tests/app/: health_check.rs  mod.rs  routes.rs  test_app.rs
ogc/: Cargo.toml
ogc/src/: constants.rs  lib.rs
ogc/src/types/: mod.rs
postgres/: Cargo.toml
postgres/src/: lib.rs  repo.rs  traits.rs
qgis/: Cargo.toml  config.rs  data_defined_properties.rs  enums.rs  extent.rs  helpers.rs  mod.rs  qgis_uuid.rs
qgis/figure/: mod.rs  pg_vector_layer.rs  spec.rs
qgis/figure/figure_builder/: copyright_text.rs  id.rs  legend.rs  mod.rs  north_arrow.rs  scalebar.rs  text_box.rs
qgis/layer/: components.rs  enums.rs  map_layer_style_manager.rs  resource_metadata.rs
qgis/layer/datasource/: mod.rs  postgres.rs
qgis/layer/examples/: open-street-map.xml  os50k_wms.xml  os50k_wmts.xml  primary_boundaries.xml  style_file.xml
qgis/layer/rendering/: layer_rendering_pipeline.rs  mod.rs
qgis/layout/: layout_map_builder.rs  mod.rs  page_size.rs
qgis/layout/components/: color.rs  layout_object.rs  length.rs  mod.rs  nodes.rs  position.rs  size.rs  text_style.rs
qgis/project/: map_canvas.rs  mod.rs  root.rs
qgis/src/: clipping_settings.rs  enums.rs  helpers.rs  item_clipping_settings.rs  layer_tree_group.rs
qgis/src/layer/: enums.rs  map_layer.rs  mod.rs  resource_metadata.rs
qgis/src/layout/: layout_map_builder.rs  mod.rs
qgis/src/project/: map_canvas.rs  mod.rs  properties.rs
qgis/src/symbol/: layer_option.rs  mod.rs
qgis/src/tests/: layout_with_bng_map_and_two_layers.xml  minimal_example_project.xml  mod.rs  project-osm.xml  test_helpers.rs  tests.rs
qgis/srs/: mod.rs  spatial_ref_system.rs
qgis/symbol/: layer_option.rs  mod.rs
qgis/tests/: layout_with_polyline.xml  layout_with_text.xml  minimal_example_project_with_layout.xml  minimal_example_project_with_primary_boundaries.xml  minimal_example_project_with_primary_boundaries_and_layout.xml  project-bng.xml  project_with_single_site_boundary.xml  test_helpers.rs  tests.rs  two-layout-maps-4-layers.xml
(+1078 files in other folders)
