[workspace]
resolver = "3"
members = ["app", "domain", "ogc", "geo", "utils"]

[workspace.dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "ipnetwork",
] }
dotenvy = "0.15"
uuid = { version = "1.21", features = ["v4"] }
anyhow = "1.0.102"
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
geojson = "0.24"
geo-types = "0.7"
gdal = "0.19"
utoipa = { version = "4.2.3", features = [
    "actix_extras",
] } # Cannot upgrade to 5 due to OpenAPI 3.1 breaking OGC test suit and incompatible with current ogcapi_types crate
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0.149"
ogcapi-types = "0.3"
strum = "0.27"
isocountry = "0.3"
actix-web = "4.13"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
thiserror = "2.0.18"
ogc = { path = "../utils" }
actix-multipart = "0.7.2"
