[workspace]
resolver = "3"
members = ["app", "domain", "ogc", "geo", "utils", "qgis"]

[workspace.dependencies]
slug = "0.1.6"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "ipnetwork",
    "json",
] }
dotenvy = "0.15"
uuid = { version = "1.22", features = ["v4"] }
anyhow = "1.0.102"
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
geojson = "0.24"
geo-types = "0.7"
gdal = "0.19"
utoipa = { version = "4.2.3", features = [
    "actix_extras",
] } # Cannot upgrade to 5 due to OpenAPI 3.1 breaking OGC test suit and incompatible with current ogcapi_types crate
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
ogcapi-types = "0.3"
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
isocountry = "0.3"
actix-web = "4.13"
actix-multipart = "0.7.2"
actix-files = "0.6"
actix-http = "3.11.2"
actix-web-lab = { version = "0.26", features = ["spa"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
thiserror = "2.0.18"
ogc = { path = "../utils" }
serde_with = "3.17"
serde_urlencoded = "0.7.1"
claims = "0.8"
clerk-rs = { version = "0.4", features = ["actix"] }
config = "0.15"
secrecy = { version = "0.10", features = ["serde"] }
log = "0.4"
rand = "0.10"
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22"
reqwest = "0.13"
utoipa-swagger-ui = { version = "7", features = [
    "actix-web",
] } # Version 7 is latest version compatible with utoipa version 4
unicode-segmentation = "1.12.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
zip = "8.2.0"
tokio = { version = "1.5", features = ["sync"] }
rstest = "0.26"
