[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "geoman"

[dependencies]

ogc = { path = "../ogc" }
actix-web = { workspace = true }
clerk-rs = { version = "0.4", features = ["actix"] }
anyhow = { workspace = true }
config = "0.15"
serde = { workspace = true }
dotenvy = { workspace = true }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { workspace = true }
tracing-log = "0.2"
tracing-actix-web = "0.7"
tracing = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
sqlx = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true }
log = "0.4"
serde_json = { workspace = true }
domain = { path = "../domain" }
geojson = { workspace = true }
ogcapi-types = { workspace = true }
chrono = { workspace = true }
serde_with = "3.16"
actix-web-lab = { version = "0.24", features = ["spa"] }
actix-files = "0.6.8"
serde_urlencoded = "0.7.1"
rand = "0.9"
sha2 = "0.10.9"
hex = "0.4.3"
isocountry = { workspace = true }
[dev-dependencies]


reqwest = "0.12"
rstest = "0.26"
tokio = { version = "1.48", features = ["sync"] }
uuid = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
