[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "geoman"

[dependencies]
utils = { path = "../utils" }
ogc = { path = "../ogc" }
domain = { path = "../domain" }
geo = { path = "../geo" }
qgis = { path = "../qgis" }
actix-web = { workspace = true }
actix-multipart = { workspace = true }
actix-files = { workspace = true }
actix-http = { workspace = true }
actix-web-lab = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clerk-rs = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
gdal = { workspace = true }
geojson = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
ogcapi-types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "query"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
slug = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json", "query", "multipart"] }
rstest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
