[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
geojson = { workspace = true }
serde_json = { workspace = true }
ogc = { path = "../ogc" }
anyhow = { workspace = true }
ogcapi-types = { workspace = true, features = ["features"] }
strum = { workspace = true }
chrono = { workspace = true }
slug = "0.1.6"
unicode-segmentation = "1.12.0"
utoipa = { workspace = true }
gdal = { workspace = true }
[dev-dependencies]
claims = "0.8.0"
