[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
ogc = { path = "../ogc" }
anyhow = { workspace = true }
chrono = { workspace = true }
gdal = { workspace = true }
geojson = { workspace = true }
ogcapi-types = { workspace = true, features = ["features"] }
serde = { workspace = true }
serde_json = { workspace = true }
slug = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true, features = ["derive"] }
unicode-segmentation = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
