[package]
name = "geo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
utils = { path = "../utils" }
gdal = { workspace = true }
actix-multipart = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
claims = "0.8"
