[package]
name = "geo"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
domain = { path = "../domain" }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
gdal = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
