[package]
name = "geoman"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "geoman"

[dependencies]
actix-web = "4.11.0"
anyhow = { workspace = true }
config = "0.15.18"
derive = "1.0.0"
once_cell = "1.21.3"
serde.workspace = true

[dev-dependencies]
reqwest = "0.12.24"
tokio = "1.48.0"
