[package]
name = "geoman"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "geoman"

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
anyhow = { workspace = true }
config = "0.15.18"
derive = "1.0.0"
once_cell = "1.21.3"
serde.workspace = true

[dev-dependencies.reqwest]
version = "0.12.24"
features = ["cookies"]

[dev-dependencies]

tokio = "1.48.0"
