[package]
name = "geoman"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "geoman"

[dependencies]
actix-web = "4.11.0"
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = { workspace = true }
strum = { version = "0.27.2", features = ["derive"] }
clerk-rs = { version = "0.4.1", features = ["actix"] }
config = "0.15.18"
derive = "1.0.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.145"
dotenvy = "0.15.7"

[dev-dependencies.reqwest]
version = "0.12.24"
features = ["cookies"]

[dev-dependencies]

tokio = "1.48.0"
