[package]
name = "ogc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
geojson = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
ogcapi-types = { workspace = true }
serde_with = "3.16"
