[package]
name = "ogc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
geojson = { workspace = true }
ogcapi-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
