[package]
name = "postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
futures = { workspace = true }

tracing = { workspace = true }
domain = { path = "../domain" }
ogc = { path = "../ogc" }
geojson = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
